--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "noImplicitAny": false,
     "noImplicitOverride": true,
+    "strictNullChecks": false,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
